--- a/practice/tamplate/about.html
+++ b/practice/tamplate/about.html
@@ -1,3 +1,5 @@
 {% extends 'base.html' %}
 {% block title %}HOME {% endblock title%}
+{% block about %}active {% endblock about%}
+
 {% block body%}This is a body block. {% endblock body%}
