--- a/practice/tamplate/contact.html
+++ b/practice/tamplate/contact.html
@@ -1,3 +1,44 @@
 {% extends 'base.html' %}
 {% block title %}HOME {% endblock title%}
-{% block body%}This is a body block. {% endblock body%}
+{% block body%}
+<div class = "container px = 70%  ">
+    <h1 class="text-center">Contact</h1>
+  <form method = "post" action = '/contact'>
+    <div class="row mb-3">
+    <label for="name" class="col-sm-2 col-form-label">Enter your name</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="name">
+    </div>
+  </div>
+    <div class="row mb-3">
+    <label for="address" class="col-sm-2 col-form-label">Address</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="address">
+    </div>
+  </div>
+  <div class="row mb-3">
+    <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+    <div class="col-sm-10">
+      <input type="number" class="form-control" id="phone">
+    </div>
+  </div>
+  <div class="row mb-3">
+    <label for="email" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="email">
+    </div>
+  </div>
+    <div class="row mb-3">
+    <label for="desc" class="col-sm-2 col-form-label">Tell us why you want to contact</label>
+    <div class="col-sm-10">
+<textarea class="form-control" id="desc" rows="3"></textarea>
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">submit</button>
+ </form>
+</div>
+
+
+
+
+{% endblock body%}
