--- a/practice/tamplate/contact.html
+++ b/practice/tamplate/contact.html
@@ -4,10 +4,11 @@
 <div class = "container px = 70%  ">
     <h1 class="text-center">Contact</h1>
   <form method = "post" action = '/contact'>
+    {% csrf_token %}
     <div class="row mb-3">
     <label for="name" class="col-sm-2 col-form-label">Enter your name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="name">
+      <input class="form-control" id="name" type="text">
     </div>
   </div>
     <div class="row mb-3">
