--- a/practice/tamplate/base.html
+++ b/practice/tamplate/base.html
@@ -58,9 +58,19 @@
   </div>
 </nav>
 
-  {% block body%}
+{% if messages %}
+{% for message in messages %}
+ <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+ {{ message }}
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 
-  {%endblock body%}
+{% endfor %}
+{% endif %}
+
+{% block body%}
+
+{%endblock body%}
 <div class="b-example-divider"></div>
   <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
