--- a/practice/tamplate/contact.html
+++ b/practice/tamplate/contact.html
@@ -3,43 +3,66 @@
 {% block body%}
 <div class = "container px = 70%  ">
     <h1 class="text-center">Contact</h1>
-  <form method = "post" action = '/contact'>
+  <form method = "POST" action = '/contact'>
     {% csrf_token %}
     <div class="row mb-3">
     <label for="name" class="col-sm-2 col-form-label">Enter your name</label>
     <div class="col-sm-10">
-      <input class="form-control" id="name" type="text">
+      <input class="form-control"  id = "name" name="name" type="text">
     </div>
   </div>
     <div class="row mb-3">
     <label for="address" class="col-sm-2 col-form-label">Address</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="address">
+      <input type="text" class="form-control" id="address" name="address">
     </div>
   </div>
   <div class="row mb-3">
     <label for="phone" class="col-sm-2 col-form-label">Phone</label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="phone">
+      <input type="number"  name="phone" class="form-control" id="phone">
     </div>
   </div>
   <div class="row mb-3">
     <label for="email" class="col-sm-2 col-form-label">Email</label>
     <div class="col-sm-10">
-      <input type="email" class="form-control" id="email">
+      <input type="email" class="form-control" id="email" name="email">
     </div>
   </div>
     <div class="row mb-3">
     <label for="desc" class="col-sm-2 col-form-label">Tell us why you want to contact</label>
     <div class="col-sm-10">
-<textarea class="form-control" id="desc" rows="3"></textarea>
+<textarea class="form-control" id="desc" rows="3" name="desc"></textarea>
     </div>
   </div>
   <button type="submit" class="btn btn-primary">submit</button>
  </form>
 </div>
 
+<!--table to show inserted data-->
+{% for i in all_contact %}
+<div class="container">
+  <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>{{i.name}}</td>
+      <td>{{i.phone}}</td>
+      <td>{{i.email}}</td>
 
+    </tr>
 
+  </tbody>
+</table>
+</div>
+{% endfor %}
 
 {% endblock body%}
